--- a/templates/input_form.html
+++ b/templates/input_form.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>Study Level Prediction</title>
-
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-      body {
-        background: #236170 ;
-        padding: 30px;
-        text-align: center;
-        font-family: 'Oswald', sans-serif;
+        body {
+            background: #236170;
+            padding: 30px;
+            text-align: center;
+            font-family: 'Oswald', sans-serif;
         }
 
         h1 {
@@ -25,12 +26,11 @@
             display: block;
             margin-bottom: 10px;
             color: rgb(7, 7, 7);
-
         }
 
         select,
         input[type="number"] {
-            width: 75%;
+            width: 100%;
             padding: 12px;
             margin-bottom: 20px;
             border: 3px solid #03a506;
@@ -61,13 +61,11 @@
             color: #f2f2f2;
         }
 
-
         br {
             margin-top: 15px;
             display: block;
             content: '';
         }
-
 
         form {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -75,76 +73,83 @@
             padding: 10px;
             background: rgba(255, 255, 255, 0.9);
         }
-
     </style>
-
 </head>
 <body>
     <h1>Predicting Your Study Level</h1>
 
-
     <form action="/predict" method="post">
-        <label for="hours_studied">Hours Studied for Quiz:</label>
-        <select id="hours_studied" name="hours_studied" required>
-            <option value="" disabled selected>Select hours studied (1-10)</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select><br><br>
+        <div class="form-group">
+            <label for="hours_studied">Hours Studied for Quiz:</label>
+            <select id="hours_studied" name="hours_studied" class="form-control" required>
+                <option value="" disabled selected>Select hours studied (1-10)</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
 
-        
+        <div class="form-group">
+            <label for="previous_scores">Previous Score of the Quiz (0 - 100):</label>
+            <input type="number" id="previous_scores" name="previous_scores" class="form-control" required min="0" max="100">
+        </div>
 
-        <label for="previous_scores">Previous Score of the Quiz (0 - 100):</label>
-        <input type="number" id="previous_scores" name="previous_scores" required min="0" max="100"><br><br>
+        <div class="form-group">
+            <label for="extracurricular_activities">Do You Do Extracurricular Activities?</label>
+            <select id="extracurricular_activities" name="extracurricular_activities" class="form-control" required>
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+            </select>
+        </div>
 
-        <label for="extracurricular_activities">Do You Do Extracurricular Activities?</label>
-        <select id="extracurricular_activities" name="extracurricular_activities" required>
-            <option value="Yes">Yes</option>
-            <option value="No">No</option>
-        </select><br><br>
+        <div class="form-group">
+            <label for="sleep_hours">Sleeping Hours (Day Before the Quiz):</label>
+            <select id="sleep_hours" name="sleep_hours" class="form-control" required>
+                <option value="" disabled selected>Select sleeping hours (1-10)</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
 
-        <label for="sleep_hours">Sleeping Hours (Day Before the Quiz):</label>
-        <select id="sleep_hours" name="sleep_hours" required>
-            <option value="" disabled selected>Select sleeping hours (1-10)</option>
-            
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select><br><br>
+        <div class="form-group">
+            <label for="sample_papers_practiced">Sample Papers Practiced Before the Quiz:</label>
+            <select id="sample_papers_practiced" name="sample_papers_practiced" class="form-control" required>
+                <option value="" disabled selected>Select practiced Papers (1-10)</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
 
-
-
-        <label for="sample_papers_practiced">Sample Papers Practiced Before the Quiz:</label>
-        <select id="sample_papers_practiced" name="sample_papers_practiced" required>
-            <option value="" disabled selected>Select practiced Papers (1-10)</option>
-        
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select><br><br>
-
-        <input type="submit" value="Enter to Quiz">
+        <input type="submit" value="Enter to Quiz" class="btn btn-success">
     </form>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
